--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
+*,
+::after,
+::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+  font-family: "Noto Sans JP", sans-serif;
+  letter-spacing: -1px;
+  color: var(--color-dark);
+}
+
+body {
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 600;
+  line-height: 1.2;
+}
+h1 {
+  font-size: 5.6rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.text-display-l {
+  font-size: var(--text-display);
+}
+
+h2 {
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 2.2rem;
+}
+
+:root {
+  --text-small: 1.6rem;
+  --text-title-s: 2.4rem;
+  --text-title-m: 3rem;
+  --text-title-l: 4.6rem;
+  --text-display: 5.6rem;
+
+  --color-white: #ffffff;
+  --color-gray: #555555;
+  --color-dark: #303030;
+  --color-light: #f0efef;
+  --color-lighter: #f5f5f5;
+  --color-blue-1: ##006491;
+  --color-blue-2: ##4c7c93;
+  --color-red-1: #e31837;
 }
