--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,21 @@ h2 {
 h3 {
   font-size: 2.2rem;
 }
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  height: 4.8rem;
+  padding: 1.2rem;
+  border: none;
+  outline: none;
+  border-radius: 0.8rem;
+  font-size: var(--text-title-s);
+  font-weight: 400;
+  background-color: transparent;
+  cursor: pointer;
+}
 
 :root {
   --text-small: 1.6rem;
