--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,10 @@ h4 {
   line-height: 1.2;
 }
 h1 {
-  font-size: 5.6rem;
+  font-size: 6.4rem;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 800;
+  letter-spacing: -2px;
 }
 .text-display-l {
   font-size: var(--text-display);
@@ -48,16 +49,17 @@ button {
   padding: 1.2rem;
   border: none;
   outline: none;
-  border-radius: 0.8rem;
+  border-radius: 0.6rem;
   font-size: var(--text-title-s);
   font-weight: 400;
   background-color: transparent;
   cursor: pointer;
+  transition: all 0.3s;
 }
 
 :root {
-  --text-small: 1.6rem;
-  --text-title-s: 2.4rem;
+  --text-small: 1.8rem;
+  --text-title-s: 2.2rem;
   --text-title-m: 3rem;
   --text-title-l: 4.6rem;
   --text-display: 5.6rem;
@@ -67,7 +69,7 @@ button {
   --color-dark: #303030;
   --color-light: #f0efef;
   --color-lighter: #f5f5f5;
-  --color-blue-1: ##006491;
-  --color-blue-2: ##4c7c93;
+  --color-blue-1: #006491;
+  --color-blue-2: #4c7c93;
   --color-red-1: #e31837;
 }
