--- a/src/Components/Layouts/Footer/Footer.module.css
+++ b/src/Components/Layouts/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: 12rem;
-  padding: 2.4rem 4vw;
+  padding: 2.4rem 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
