--- a/src/Components/Layouts/Main/Main.module.css
+++ b/src/Components/Layouts/Main/Main.module.css
@@ -1,5 +1,8 @@
 .main {
   width: 100%;
-  padding: 0 5vw;
-  border: 1px solid red;
+  padding: 2.4rem 5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
