--- a/src/Components/SideBar/Sidebar.module.css
+++ b/src/Components/SideBar/Sidebar.module.css
@@ -69,7 +69,7 @@
   font-weight: 400;
 }
 .sidebar__link:not(:last-child) {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .sidebar__language {
   color: var(--color-white);
@@ -85,7 +85,7 @@
 }
 .sidebar__language_btn {
   color: var(--color-white);
-  font-size: var(--text-title-m);
+  font-size: var(--text-title-s);
   height: 6.4rem;
   padding: 1.5rem;
 }
