--- a/src/index.css
+++ b/src/index.css
@@ -35,10 +35,12 @@ h1 {
 
 h2 {
   font-size: 2.8rem;
+  text-transform: uppercase;
 }
 
 h3 {
   font-size: 2.2rem;
+  text-transform: uppercase;
 }
 button {
   display: flex;
